[package]
name = "rit-connect"
version = "0.1.0"
edition = "2021"
authors = ["Danny Bevan <daniel.j.bevan96@gmail.com>"]
description = "rit connect microservice. Handles websocket connections and passes events to other microservices via gRPC"
license = "MIT"
repository = "https://github.com/Dbevan770/rit-connect"
keywords = ["rit", "connect", "microservice", "websocket", "grpc"]
categories = ["rit", "connect", "microservice", "websocket", "grpc"]
readme = "README.md"
exclude = ["/.github", "/.devcontainer", "/.vscode" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
socketioxide = "0.10.1"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[badges]
maintenance = { status = "actively-developed" }
